CallMD/src/objects/Package__c.object
<CustomObject>
    <fields>
        <fullName>Copay_Yes_No__c</fullName>
        <label>Copay Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay__c</fullName>
        <label>Copay</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Once Time</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Month</fullName>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                </value>
                <value>
                    <fullName>12 Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Consultations__c</fullName>
        <label>Free Consultations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Consultations__c</fullName>
        <label>No of Consultations</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Package</label>
    <nameField>
        <displayFormat>PKG#{00000}</displayFormat>
        <label>PKG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>